--- a/OpenSky.Client/Pages/UserManager.xaml
+++ b/OpenSky.Client/Pages/UserManager.xaml
@@ -24,7 +24,7 @@
                       xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                       mc:Ignorable="d" Loaded="UserManagerOnLoaded"
                       d:DesignHeight="450" d:DesignWidth="800"
-                      HorizontalScrollBar="False" LoadingText="{Binding LoadingText}">
+                      HorizontalScrollBar="False" VerticalScrollBar="False" LoadingText="{Binding LoadingText}">
     <UserControl.DataContext>
         <models:UserManagerViewModel />
     </UserControl.DataContext>
