--- a/OpenSky.Client/Pages/FlightPlan.xaml
+++ b/OpenSky.Client/Pages/FlightPlan.xaml
@@ -37,6 +37,11 @@
                 <x:Type TypeName="openSkyApi:OnlineNetwork" />
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        <ObjectDataProvider x:Key="FlightRulesDataProvider" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="openSkyApi:FlightRule" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </UserControl.Resources>
     <UserControl.InputBindings>
         <KeyBinding Key="S" Modifiers="Control" Command="{Binding SaveCommand}" />
@@ -107,6 +112,7 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -120,8 +126,9 @@
                         <TextBlock Grid.Row="0" Grid.Column="4" Margin="5" HorizontalAlignment="Center">Alternate</TextBlock>
                         <TextBlock Grid.Row="0" Grid.Column="5" Margin="5" HorizontalAlignment="Center">Date</TextBlock>
                         <TextBlock Grid.Row="0" Grid.Column="6" Grid.ColumnSpan="2" Margin="5" HorizontalAlignment="Center">Time (Utc)</TextBlock>
-                        <TextBlock Grid.Row="0" Grid.Column="8" Margin="5" HorizontalAlignment="Center">Atc Callsign</TextBlock>
-                        <TextBlock Grid.Row="0" Grid.Column="9" Margin="5" HorizontalAlignment="Center">Online network</TextBlock>
+                        <TextBlock Grid.Row="0" Grid.Column="8" Margin="5" HorizontalAlignment="Center">Flight rules</TextBlock>
+                        <TextBlock Grid.Row="0" Grid.Column="9" Margin="5" HorizontalAlignment="Center">Atc Callsign</TextBlock>
+                        <TextBlock Grid.Row="0" Grid.Column="10" Margin="5" HorizontalAlignment="Center">Online network</TextBlock>
 
                         <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding IsAirlineFlight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="20" HorizontalAlignment="Center" IsEnabled="{Binding Airline, Converter={StaticResource NullItemToEnabledConverter}}" />
                         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FlightNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" Width="90" />
@@ -149,8 +156,9 @@
                         <DatePicker Grid.Row="1" Grid.Column="5" SelectedDate="{Binding PlannedDepartureTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
                         <TextBox Grid.Row="1" Grid.Column="6" Text="{Binding DepartureHour, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0" />
                         <TextBox Grid.Row="1" Grid.Column="7" Text="{Binding DepartureMinute, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,5,0" />
-                        <TextBox Grid.Row="1" Grid.Column="8" Text="{Binding AtcCallsign, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,5,0" />
-                        <ComboBox Grid.Row="1" Grid.Column="9" HorizontalAlignment="Stretch" ItemsSource="{Binding Source={StaticResource OnlineNetworkDataProvider}}" SelectedItem="{Binding OnlineNetwork, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        <ComboBox Grid.Row="1" Grid.Column="8" HorizontalAlignment="Stretch" Margin="5,0" ItemsSource="{Binding Source={StaticResource FlightRulesDataProvider}}" SelectedItem="{Binding FlightRule, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBox Grid.Row="1" Grid.Column="9" Text="{Binding AtcCallsign, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
+                        <ComboBox Grid.Row="1" Grid.Column="10" HorizontalAlignment="Stretch" ItemsSource="{Binding Source={StaticResource OnlineNetworkDataProvider}}" SelectedItem="{Binding OnlineNetwork, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
 
                         <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Vertical">
                             <Border Background="DarkOrange" CornerRadius="5" Margin="5,0" Visibility="{Binding OriginInvalidWarningVisibility}" ToolTip="There is no matching airport for the specified ICAO code.">
